# fractal

./: .env.example  .gitignore  Cargo.toml  ENGINEERING.md  MAMBA_GOLF.md  README.md  SPEC_v3_1.md
.codex/: autoresearch.toml
.githooks/: pre-commit
docs/: ELM-ffn-expert-sweep-results.md  EML-codex-work.md  EML-summary-GPT.md  causal_topk_confirmation_summary.md  cloud-workflow-policy.md  codebase-inspection-plan.md  core_baseline_proving_ground_readiness.md  depth_recurrence_architecture_families_summary.md  depth_recurrence_architecture_matrix.md  depth_recurrence_initial_tranche_summary.md  depth_recurrence_next_tranche_summary.md  experiment-interface.md  harness-doctrine.md  harness-hardening-checklist.md  mod_oracle_distillation_smoke.md  mod_parcae_fusion_summary.md  next-run-manifests.md  next-training-phase.md  optimization-surfaces.md  paper_primitive_research_teachback.md  parcae-control-local-compare.md  parcae-local-smoke.md  parcae_rgrp_candidate_ruleout_plan.md  primitive-tracker.md  program-state.md  promotion-policy.md  runpod-audit.md  runpod-runbook-hazards.md  stack-comp.html  stage-0-training-contract.md  stage1-weight-export-contract.md  tokenizer-tracker.md  tpu_scale_data_kickoff_status.md  tpu_training_eval_data_storage.md  v2_kpis.md  (+5 more)
fractal-eval-private/: Cargo.toml
fractal-eval-private/src/: hybrid_attention.rs  hybrid_attention_goe.rs  hybrid_attention_mini_moe.rs  hybrid_attention_scale_proxy.rs  hybrid_attention_training.rs  hybrid_prevalidation.rs  hybrid_training.rs  lib.rs  process_memory.rs  v2_ablation.rs  v2_benchmark.rs  v2_checkpoint.rs  v2_fixture.rs  v2_learned_ablation.rs  v2_ledger.rs  v2_supervised.rs  v2_synthetic.rs  v2_training.rs
fractal-primitives-private/: Cargo.toml
fractal-primitives-private/src/: lib.rs  tests.rs
fractal-primitives-private/src/primitives/: b1_fractal_gated.rs  b2_stable_hierarchical.rs  b3_fractal_hierarchical.rs  b4_universal.rs  generalized_mobius.rs  ifs.rs  julia_recursive_escape.rs  logistic_chaotic_map.rs  mandelbox_recursive.rs  mod.rs  p1_contractive.rs  p1_fractal_hybrid.rs  p2_mandelbrot.rs  p3_hierarchical.rs
fractal-tokenizer/: Cargo.toml
fractal-tokenizer/benchmarks/: oss_benchmark_v2.py
fractal-tokenizer/experiments/docs/: adapter-plan.md  adaptive-signature-granularity-spec.md  atom-first-substrate-spec.md  batch-runtime-contract-spec.md  boundary-aware-split-spec.md  canonical-tokenizer-recursive-overlay-spec.md  code-docs-structural-diagnosis.md  compositional-motif-vocab-spec.md  document-local-motif-cache-spec.md  edge-case-hardening-spec.md  embedding-bridge-scaffold-spec.md  face-off-impl.md  held-out-oov-decision.md  hybrid-bakeoff-spec.md  local-first-bakeoff-spec.md  model-facing-contract.md  option-space-tracker.md  overlay-model-facing-transport-spec.md  overlay-offline-benchmark-spec.md  primitive-kill-criterion.md  primitive-pivot-plan.md  prototype-emission-gate-spec.md  prototype-precision-guardrails-spec.md  prototype-primary-identity-spec.md  recursive-tokenizer-postmortem.md  seaworthy-parallel-plan.md  server-side-overlay-envelope-spec.md  shared-overlay-dictionary-spec.md  sota-vs-fractal-tokenizer-architecture.md  state-signature-prototype-induction-spec.md  syntax-aware-segmentation-spec.md  tokenizer-face-off.md  typed-lexical-fallback-spec.md
fractal-tokenizer/experiments/docs/improvements/: README.md  adaptive-frontier-budgeted.md  adaptive-frontier-finest-known.md  adaptive-frontier-greedy-known.md  adaptive-frontier-hybrid-structural.md  adaptive-frontier-novelty-aware.md  adaptive-frontier-reuse-aware.md  adaptive-frontier-span-length-aware.md  adaptive-frontier-state-aware.md  chunking-model-packaging.md  ranked-shortlist.md
fractal-tokenizer/src/: lib.rs  overlay.rs  tests.rs  tokenizer.rs
fractal-tokenizer/src/faceoff/: decode.rs  encode.rs  fallback.rs  lexeme.rs  mod.rs  packaging.rs  vocab.rs
fractal-tokenizer/src/model_face/: batch.rs  bridge.rs  mod.rs  native.rs  ollama.rs  overlay.rs  server_envelope.rs  traits.rs
fractal-tokenizer/src/primitives/: b1_fractal_gated.rs  b3_fractal_hierarchical.rs  b4_universal.rs  mod.rs  p1_fractal_hybrid.rs  p2_mandelbrot.rs
(+386 files in other folders)
