[package]
name = "fractal"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = []
cuda = ["fractal-core/cuda", "fractal-primitives-private/cuda"]

[workspace]
members = ["fractal-core", "fractal-primitives-private", "fractal-eval-private"]
default-members = [".", "fractal-core", "fractal-primitives-private", "fractal-eval-private"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
burn = { version = "=0.16.1", default-features = false, features = ["std", "autodiff", "candle", "wgpu"] }
burn-candle = "=0.16.1"
burn-mlx = "=0.1.2"
rand = "0.8"

[dependencies]
fractal-core = { path = "fractal-core" }
fractal-primitives-private = { path = "fractal-primitives-private" }
fractal-eval-private = { path = "fractal-eval-private" }
