[package]
name = "fractal"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = []
cuda = ["fractal-core/cuda", "fractal-primitives-private/cuda"]

[workspace]
members = [
    "fractal-core",
    "fractal-primitives-private",
    "fractal-eval-private",
    "fractal-tokenizer",
]
default-members = [
    ".",
    "fractal-core",
    "fractal-primitives-private",
    "fractal-eval-private",
    "fractal-tokenizer",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
burn = { version = "=0.20.1", default-features = false, features = ["std", "autodiff", "candle", "wgpu"] }
burn-candle = "=0.20.1"
rand = "0.8"

[patch.crates-io]
burn-candle = { path = "vendor/burn-candle" }

[dependencies]
fractal-core = { path = "fractal-core" }
fractal-primitives-private = { path = "fractal-primitives-private" }
fractal-eval-private = { path = "fractal-eval-private" }
