[package]
name = "fractal-eval-private"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
name = "fractal_eval_private"
path = "src/lib.rs"

[dependencies]
burn = { workspace = true }
fractal-core = { path = "../fractal-core" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
